added amount_currency to interface
