# src/schema.rs
@@ -9,6 +9,7 @@ table! {
         user_id -> Uuid,
         created_at -> Timestamp,
         updated_at -> Timestamp,
+        amount_currency -> Varchar,
     }
 }
 
